# telegram_f1_top_points_mcp_bot

./: README.md  f1_scraper.py  f1_standings.csv  main.py  pyproject.toml  run_bot.py
gmail_mcp/: gamil_mcp_server.py  send_email.py
